kubernetes_yaml/nginx_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    app: web2
spec:
  containers:
    - name: web3
      image: nginx
      ports:
      - containerPort: 80
