kubernetes_yaml/mario_svc_cluster.yaml
apiVersion:       v1
kind:             Service
metadata:
  name:           mario-service-cluster
  annotations:
    cloud.google.com/backend-config: '{"ports": {
      "8080":"mario-service-loadbalancer-backend-config"
      }}'
spec:
  type:           ClusterIP
  selector:
    app:          mario
  ports:
    - name:       http
      protocol:   TCP
      port:       8080
      targetPort: 8080
