kubernetes_yaml/mario_svc_loadbalancer.yaml
apiVersion:       v1
kind:             Service
metadata:
  name:           mario-service-loadbalancer
spec:
  type:           LoadBalancer
  selector:
    app:          mario
  ports:
    - name:       mario
      protocol:   TCP
      port:       8080
      targetPort: 8080
