kubernetes_yaml/mario_svc_nodeport.yaml
apiVersion:       v1
kind:             Service
metadata:
  name:           mario-service-port
spec:
  type:           NodePort
  selector:
    app:          mario
  ports:
    - name:       http
      protocol:   TCP
      port:       8080
      targetPort: 8080
      # nodePort:   30080
