kubernetes_yaml/nginx_svc_cluster.yaml
apiVersion:       v1
kind:             Service
metadata:
  name:           nginx-service-cluster
spec:
  type:           ClusterIP
  selector:
    app:          nginx1
  ports:
    - name:       http1-syun
      protocol:   TCP
      port:       8080
      targetPort: 80
