kubernetes_yaml/nginx_ingress.yaml
apiVersion:         networking.k8s.io/v1
kind:               Ingress
metadata:
  name:             nginx-service-ingress
spec:
  defaultBackend:
    service:
          name:     nginx-service-cluster
          port:
            number: 8080
